apps/hermes-agent/components/api-server/patch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes-agent
spec:
  ports:
    - name: api-server
      port: 8642
      targetPort: api-server
